--- a/db/MIPS_Processor.lpc.html
+++ b/db/MIPS_Processor.lpc.html
@@ -16,7 +16,7 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >MEM_WB_Pipe</TD>
+<TD >MEM_WB_Pipeline</TD>
 <TD >108</TD>
 <TD >2</TD>
 <TD >0</TD>
@@ -32,31 +32,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >EX_MEM_Pipe</TD>
-<TD >174</TD>
-<TD >2</TD>
+<TD >EX_MEM_Pipeline</TD>
+<TD >142</TD>
+<TD >34</TD>
 <TD >0</TD>
-<TD >2</TD>
-<TD >170</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >ID_EX_Pipe</TD>
-<TD >163</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >2</TD>
-<TD >159</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
+<TD >34</TD>
+<TD >138</TD>
+<TD >34</TD>
+<TD >34</TD>
+<TD >34</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -64,7 +48,23 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >IF_ID_Pipe</TD>
+<TD >ID_EX_Pipeline</TD>
+<TD >164</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >160</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >IF_ID_Pipeline</TD>
 <TD >68</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -80,183 +80,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >MUX_ForWriteData</TD>
-<TD >65</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >MUX_ForWriteRegister</TD>
-<TD >11</TD>
-<TD >5</TD>
-<TD >0</TD>
-<TD >5</TD>
-<TD >5</TD>
-<TD >5</TD>
-<TD >5</TD>
-<TD >5</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >MUX_MemtoRegister</TD>
-<TD >65</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >Memory</TD>
-<TD >67</TD>
-<TD >2</TD>
-<TD >20</TD>
-<TD >2</TD>
-<TD >32</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >SubstractToMemoryAddress</TD>
-<TD >64</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >MuxFwdUnitB2</TD>
-<TD >65</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >MuxFwdUnitB1</TD>
-<TD >65</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >MuxFwdUnitA2</TD>
-<TD >65</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >MuxFwdUnitA1</TD>
-<TD >65</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >MUX_ForRTypeAndIType</TD>
-<TD >11</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >5</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >MUX_ForReadDataAndImmediate</TD>
-<TD >65</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >FwdUnit</TD>
+<TD >ForwandingUnit</TD>
 <TD >22</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -265,6 +89,38 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >HazardUnit</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >RAM_Memory</TD>
+<TD >67</TD>
+<TD >2</TD>
+<TD >20</TD>
+<TD >2</TD>
+<TD >32</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -304,23 +160,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >MUXControlHDU</TD>
-<TD >21</TD>
-<TD >10</TD>
-<TD >0</TD>
-<TD >10</TD>
-<TD >10</TD>
-<TD >10</TD>
-<TD >10</TD>
-<TD >10</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >JumpAddr_4</TD>
+<TD >SubstractToMemoryAddress</TD>
 <TD >64</TD>
 <TD >32</TD>
 <TD >0</TD>
@@ -336,31 +176,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >JumpShifter</TD>
-<TD >32</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >32</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >BranchAddr_4</TD>
+<TD >PC_Address_Jump</TD>
 <TD >64</TD>
+<TD >34</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >34</TD>
 <TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >34</TD>
+<TD >34</TD>
+<TD >34</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -368,10 +192,10 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >BranchShifter</TD>
-<TD >32</TD>
+<TD >PC_Plus_Immediate</TD>
+<TD >64</TD>
 <TD >2</TD>
-<TD >2</TD>
+<TD >0</TD>
 <TD >2</TD>
 <TD >32</TD>
 <TD >2</TD>
@@ -384,7 +208,23 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >SignExtendForConstants</TD>
+<TD >PC_Plus_4</TD>
+<TD >64</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >SignExtend</TD>
 <TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -400,7 +240,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >Data1EqualsData2|Gate_BeqOrBNE</TD>
+<TD >CompareForBranch|Gate_BranchNEANDZero</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -416,7 +256,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >Data1EqualsData2|Gate_BranchNEANDZero</TD>
+<TD >CompareForBranch|Gate_BranchEQANDZero</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -432,23 +272,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >Data1EqualsData2|Gate_BranchEQANDZero</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >Data1EqualsData2</TD>
+<TD >CompareForBranch</TD>
 <TD >66</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1040,12 +864,12 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >ControlUnit</TD>
-<TD >12</TD>
+<TD >MUX_ForWriteData</TD>
+<TD >65</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >15</TD>
+<TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1056,12 +880,140 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >HazardUnit</TD>
-<TD >16</TD>
+<TD >MUX_ForWriteRegister</TD>
+<TD >11</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >5</TD>
+<TD >5</TD>
+<TD >5</TD>
+<TD >5</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MUX_ForMemtoRegister</TD>
+<TD >65</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MUX_ForControls</TD>
+<TD >21</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >10</TD>
+<TD >10</TD>
+<TD >10</TD>
+<TD >10</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MUX_ForFwdB2</TD>
+<TD >65</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MUX_ForFwdB1</TD>
+<TD >65</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MUX_ForFwdA2</TD>
+<TD >65</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MUX_ForFwdA1</TD>
+<TD >65</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MUX_ForRTypeAndIType</TD>
+<TD >11</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MUX_ForReadDataAndImmediate</TD>
+<TD >65</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1120,22 +1072,6 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >PC_Puls_4</TD>
-<TD >64</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
 <TD >ROMProgramMemory</TD>
 <TD >32</TD>
 <TD >0</TD>
@@ -1152,7 +1088,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >ProgramCounter</TD>
+<TD >program_counter</TD>
 <TD >35</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1168,28 +1104,12 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >OrBranchEq</TD>
-<TD >2</TD>
+<TD >ControlUnit</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-</TR>
-<TR >
-<TD >Gate_BranchORIFFlush</TD>
-<TD >2</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >1</TD>
+<TD >15</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
